@@ -170,14 +170,14 @@ class WC_REST_Payments_Tos_Controller extends WC_Payments_REST_Controller {
 	}
 
 	/**
-	 * Deletes _wcpay_oauth_stripe_connected option after KYC completion has been tracked.
+	 * Deletes _wcpay_onboarding_stripe_connected option after KYC completion has been tracked.
 	 *
 	 * @param WP_REST_Request $request Full data about the request.
 	 *
 	 * @return WP_REST_Response
 	 */
 	public function remove_stripe_connect_track( $request ) {
-		delete_option( '_wcpay_oauth_stripe_connected' );
+		delete_option( '_wcpay_onboarding_stripe_connected' );
 		return new WP_REST_Response( [ 'result' => self::RESULT_SUCCESS ] );
 	}
 }
